# Artifice-Engine

./: CHANGELOG.md  DEVLOG.md  LICENSE  NODES.md  README.md  ROADMAP.md  claude.md  pyproject.toml
docs/: getting-started.md  glic-guide.md  node-reference.md
src/artifice/: __main__.py
src/artifice/core/: gpu_node.py  node.py
src/artifice/gpu/shaders/color/: colorspace.glsl
src/artifice/gpu/shaders/generator/: testcard.glsl
src/artifice/nodes/: __init__.py
src/artifice/nodes/color/: colorspace.py
src/artifice/nodes/generator/: __init__.py  testcard.py
src/artifice/nodes/gpu/: __init__.py  color.py  corruption.py  generator.py  quantization.py
src/artifice/nodes/io/: __init__.py  loader.py  saver.py  testcard.py
src/artifice/nodes/utility/: __init__.py  passthrough.py
src/artifice/ui/: inspector.py  main_window.py  node_editor.py  node_widget.py  palette.py  realtime_preview.py
tests/: conftest.py  test_gpu.py  test_graph.py  test_io_nodes.py  test_nodes.py  test_ui.py
